--- a/login.html
+++ b/login.html
@@ -6,10 +6,107 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>大事件登录页</title>
+
+  <!-- 导入 layui.css -->
+  <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+  <!-- 导入 login.css -->
+  <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 
 <body>
 
+  <!-- 头部的  Logo   -->
+  <div class="layui-main">
+    <img src="/assets/images/logo.png" alt="">
+  </div>
+
+  <!-- 登录注册框 -->
+  <div class="login-frame">
+    <!-- 登录框标题 -->
+    <div class="title-box"></div>
+
+    <!-- 登录的 div -->
+    <div class="login-box">
+      <!-- 登陆表单 -->
+      <form class="layui-form" id="form-login">
+        <!-- 用户名输入框 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-username"></i>
+          <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off"
+            class="layui-input">
+        </div>
+
+        <!-- 密码输入框 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+            autocomplete="off" class="layui-input">
+        </div>
+
+        <!-- 登录按钮 -->
+        <div class="layui-form-item">
+          <!-- lay- -->
+          <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
+        </div>
+
+        <!--跳转链接 -->
+        <div class="layui-form-item  link">
+          <a href="javascript:;" id="link-reg">去注册账号</a>
+        </div>
+
+      </form>
+    </div>
+
+    <!-- 注册的 div -->
+    <div class="reg-box">
+      <!-- 注册表单 -->
+      <form class="layui-form" id="form-reg">
+        <!-- 用户名输入框 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-username"></i>
+          <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off"
+            class="layui-input">
+        </div>
+
+        <!-- 密码输入框 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+            autocomplete="off" class="layui-input">
+        </div>
+
+        <!-- 密码确认框 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="password" name="repassword" required lay-verify="required|pwd|repwd" placeholder="再次确认密码"
+            autocomplete="off" class="layui-input">
+        </div>
+
+        <!-- 登录按钮 -->
+        <div class="layui-form-item">
+          <!-- lay-sudmit : layui ,表单的提交按钮属性-->
+          <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
+        </div>
+
+        <!--跳转链接 -->
+        <div class="layui-form-item  link">
+          <a href="javascript:;" id="link-login">登录</a>
+        </div>
+
+      </form>
+    </div>
+
+  </div>
+
+
+  <!-- 导入 layui.js -->
+  <script src="/assets/lib/layui/layui.all.js"></script>
+  <!-- 导入  JQuery  -->
+  <script src="/assets/lib/jquery.js"></script>
+  <!-- 导入 baseAPI.js  统一拼接请求的根路径 -->
+  <script src="./assets/js/baseAPI.js"></script>
+  <!-- 导入 login.js -->
+  <script src="/assets/js/login.js"></script>
 </body>
 
 </html>
