--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
       </div>
       <!-- 头部区域（可配合layui已有的水平导航） -->
       <ul class="layui-nav layui-layout-right">
+
+        <!-- 个人中心 -->
         <li class="layui-nav-item">
-          <a href="javascript:;">
+          <a href="javascript:;" class="user-infoBox">
             <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+            <span class="text-avatar">A</span>
             个人中心
             <span class="layui-nav-more"></span>
           </a>
@@ -42,8 +45,10 @@
             <dd><a href="">重置密码</a></dd>
           </dl>
         </li>
+
+        <!-- 退出 -->
         <li class="layui-nav-item">
-          <a href="">
+          <a href="javascript:;" id="btnLogout">
             <span class="iconfont icon-tuichu"></span>
             退出
           </a>
@@ -57,21 +62,22 @@
         <!-- 用户信息区域 -->
         <div class="user-infoBox">
           <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-          <span class="welcome">欢迎!!!!</span>
+          <span class="text-avatar">A</span>
+          <span class="welcome" id="welcome">欢迎!!!!</span>
         </div>
 
         <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-        <ul class="layui-nav layui-nav-tree" lay-filter="test">
+        <ul class="layui-nav layui-nav-tree " lay-shrink="all">
 
-          <!-- 首页 -->
-          <li class="layui-nav-item">
-            <a href="">
+          <!-- 首页  (layui-this  默认被选中)-->
+          <li class="layui-nav-item layui-this">
+            <a href="/home/dashboard.html" target="fm">
               <span class="iconfont icon-home"></span>
               首页
             </a>
           </li>
           <!-- 文章管理 -->
-          <li class="layui-nav-item layui-nav-itemed">
+          <li class="layui-nav-item">
             <a class="" href="javascript:;">
               <span class="iconfont icon-16"></span>
               文章管理
@@ -133,7 +139,7 @@
     <!-- 网页主体 -->
     <div class="layui-body">
       <!-- 内容主体区域 -->
-      <div style="padding: 15px;">内容主体区域</div>
+      <iframe name="fm" src="/home/dashboard.html" frameborder="0"></iframe>
     </div>
 
     <div class="layui-footer">
@@ -141,6 +147,19 @@
       ? layui.com - 底部固定区域
     </div>
   </div>
+
+
+  <!-- 导入 layui.all.js 文件 -->
+  <script src="/assets/lib/layui/layui.all.js"></script>
+
+  <!-- 导入 jQuery.js -->
+  <script src="/assets/lib/jquery.js"></script>
+
+  <!-- 导入 baseAPI.js -->
+  <script src="/assets/js/baseAPI.js"></script>
+
+  <!-- 导入 index.js -->
+  <script src="/assets/js/index.js"></script>
 </body>
 
 
