--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
               <span class="layui-nav-more"></span>
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;">
+              <dd>
+                <a href="/user/user_info.html" target="fm">
                   <i class="layui-icon layui-icon-app"></i>
                   基本资料
                 </a>
@@ -120,11 +121,11 @@
               <dd>
                 <a href="javascript:;">
                   <i class="layui-icon layui-icon-app"></i>
-                  跟换头像
+                  更换头像
                 </a>
               </dd>
               <dd>
-                <a href="javascript:;">
+                <a href="/user/user_pwd.html" target="fm">
                   <i class="layui-icon layui-icon-app"></i>
                   重置密码
                 </a>
