user 个人中心功能的开发

--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
   <!-- 导入 index.css -->
   <link rel="stylesheet" href="./assets/css/index.css">
 
-
-
-
 </head>
 
 <body class="layui-layout-body">
@@ -119,7 +116,7 @@
                 </a>
               </dd>
               <dd>
-                <a href="javascript:;">
+                <a href="/user/user_avatar.html" target="fm">
                   <i class="layui-icon layui-icon-app"></i>
                   更换头像
                 </a>
